--- a/assets/bootstrap.css
+++ b/assets/bootstrap.css
@@ -3,7 +3,7 @@
 :root {
 
   --bs-primary: #0d6efd;
-    --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0))
 }
@@ -3268,6 +3268,7 @@ fieldset:disabled .btn {
 .nav-justified .nav-item .nav-link {
   width: 100%
 }
+
 .navbar {
   position: relative;
   display: flex;
@@ -3784,6 +3785,7 @@ fieldset:disabled .btn {
 .justify-content-center {
   justify-content: center !important
 }
+
 .p-0 {
   padding: 0 !important
 }
@@ -4271,6 +4273,10 @@ fieldset:disabled .btn {
   visibility: hidden !important
 }
 
+.mb-0 {
+  margin-bottom: 0 !important;
+}
+
 @media (min-width:576px) {
   .float-sm-start {
     float: left !important
@@ -4520,214 +4526,210 @@ fieldset:disabled .btn {
     order: 6 !important
   }
 
-  .m-sm-0 {
-    margin: 0 !important
+  .m-0 {
+    margin: 0 !important;
   }
 
-  .m-sm-1 {
-    margin: 0.25rem !important
+  .m-1 {
+    margin: 0.25rem !important;
   }
 
-  .m-sm-2 {
-    margin: 0.5rem !important
+  .m-2 {
+    margin: 0.5rem !important;
   }
 
-  .m-sm-3 {
-    margin: 1rem !important
+  .m-3 {
+    margin: 1rem !important;
   }
 
-  .m-sm-4 {
-    margin: 1.5rem !important
+  .m-4 {
+    margin: 1.5rem !important;
   }
 
-  .m-sm-5 {
-    margin: 3rem !important
+  .m-5 {
+    margin: 3rem !important;
   }
 
-  .m-sm-auto {
-    margin: auto !important
+  .m-auto {
+    margin: auto !important;
   }
 
-  .mx-sm-0 {
+  .mx-0 {
     margin-right: 0 !important;
-    margin-left: 0 !important
+    margin-left: 0 !important;
   }
 
-  .mx-sm-1 {
+  .mx-1 {
     margin-right: 0.25rem !important;
-    margin-left: 0.25rem !important
+    margin-left: 0.25rem !important;
   }
 
-  .mx-sm-2 {
+  .mx-2 {
     margin-right: 0.5rem !important;
-    margin-left: 0.5rem !important
+    margin-left: 0.5rem !important;
   }
 
-  .mx-sm-3 {
+  .mx-3 {
     margin-right: 1rem !important;
-    margin-left: 1rem !important
+    margin-left: 1rem !important;
   }
 
-  .mx-sm-4 {
+  .mx-4 {
     margin-right: 1.5rem !important;
-    margin-left: 1.5rem !important
+    margin-left: 1.5rem !important;
   }
 
-  .mx-sm-5 {
+  .mx-5 {
     margin-right: 3rem !important;
-    margin-left: 3rem !important
+    margin-left: 3rem !important;
   }
 
-  .mx-sm-auto {
+  .mx-auto {
     margin-right: auto !important;
-    margin-left: auto !important
+    margin-left: auto !important;
   }
 
-  .my-sm-0 {
+  .my-0 {
     margin-top: 0 !important;
-    margin-bottom: 0 !important
+    margin-bottom: 0 !important;
   }
 
-  .my-sm-1 {
+  .my-1 {
     margin-top: 0.25rem !important;
-    margin-bottom: 0.25rem !important
+    margin-bottom: 0.25rem !important;
   }
 
-  .my-sm-2 {
+  .my-2 {
     margin-top: 0.5rem !important;
-    margin-bottom: 0.5rem !important
+    margin-bottom: 0.5rem !important;
   }
 
-  .my-sm-3 {
+  .my-3 {
     margin-top: 1rem !important;
-    margin-bottom: 1rem !important
+    margin-bottom: 1rem !important;
   }
 
-  .my-sm-4 {
+  .my-4 {
     margin-top: 1.5rem !important;
-    margin-bottom: 1.5rem !important
+    margin-bottom: 1.5rem !important;
   }
 
-  .my-sm-5 {
+  .my-5 {
     margin-top: 3rem !important;
-    margin-bottom: 3rem !important
+    margin-bottom: 3rem !important;
   }
 
-  .my-sm-auto {
+  .my-auto {
     margin-top: auto !important;
-    margin-bottom: auto !important
+    margin-bottom: auto !important;
   }
 
-  .mt-sm-0 {
-    margin-top: 0 !important
+  .mt-0 {
+    margin-top: 0 !important;
   }
 
-  .mt-sm-1 {
-    margin-top: 0.25rem !important
+  .mt-1 {
+    margin-top: 0.25rem !important;
   }
 
-  .mt-sm-2 {
-    margin-top: 0.5rem !important
+  .mt-2 {
+    margin-top: 0.5rem !important;
   }
 
-  .mt-sm-3 {
-    margin-top: 1rem !important
+  .mt-3 {
+    margin-top: 1rem !important;
   }
 
-  .mt-sm-4 {
-    margin-top: 1.5rem !important
+  .mt-4 {
+    margin-top: 1.5rem !important;
   }
 
-  .mt-sm-5 {
-    margin-top: 3rem !important
+  .mt-5 {
+    margin-top: 3rem !important;
   }
 
-  .mt-sm-auto {
-    margin-top: auto !important
+  .mt-auto {
+    margin-top: auto !important;
   }
 
-  .me-sm-0 {
-    margin-right: 0 !important
+  .me-0 {
+    margin-right: 0 !important;
   }
 
-  .me-sm-1 {
-    margin-right: 0.25rem !important
+  .me-1 {
+    margin-right: 0.25rem !important;
   }
 
-  .me-sm-2 {
-    margin-right: 0.5rem !important
+  .me-2 {
+    margin-right: 0.5rem !important;
   }
 
-  .me-sm-3 {
-    margin-right: 1rem !important
+  .me-3 {
+    margin-right: 1rem !important;
   }
 
-  .me-sm-4 {
-    margin-right: 1.5rem !important
+  .me-4 {
+    margin-right: 1.5rem !important;
   }
 
-  .me-sm-5 {
-    margin-right: 3rem !important
+  .me-5 {
+    margin-right: 3rem !important;
   }
 
-  .me-sm-auto {
-    margin-right: auto !important
+  .me-auto {
+    margin-right: auto !important;
   }
 
-  .mb-sm-0 {
-    margin-bottom: 0 !important
+  .mb-1 {
+    margin-bottom: 0.25rem !important;
   }
 
-  .mb-sm-1 {
-    margin-bottom: 0.25rem !important
+  .mb-2 {
+    margin-bottom: 0.5rem !important;
   }
 
-  .mb-sm-2 {
-    margin-bottom: 0.5rem !important
+  .mb-3 {
+    margin-bottom: 1rem !important;
   }
 
-  .mb-sm-3 {
-    margin-bottom: 1rem !important
+  .mb-4 {
+    margin-bottom: 1.5rem !important;
   }
 
-  .mb-sm-4 {
-    margin-bottom: 1.5rem !important
+  .mb-5 {
+    margin-bottom: 3rem !important;
   }
 
-  .mb-sm-5 {
-    margin-bottom: 3rem !important
+  .mb-auto {
+    margin-bottom: auto !important;
   }
 
-  .mb-sm-auto {
-    margin-bottom: auto !important
+  .ms-0 {
+    margin-left: 0 !important;
   }
 
-  .ms-sm-0 {
-    margin-left: 0 !important
+  .ms-1 {
+    margin-left: 0.25rem !important;
   }
 
-  .ms-sm-1 {
-    margin-left: 0.25rem !important
+  .ms-2 {
+    margin-left: 0.5rem !important;
   }
 
-  .ms-sm-2 {
-    margin-left: 0.5rem !important
+  .ms-3 {
+    margin-left: 1rem !important;
   }
 
-  .ms-sm-3 {
-    margin-left: 1rem !important
+  .ms-4 {
+    margin-left: 1.5rem !important;
   }
 
-  .ms-sm-4 {
-    margin-left: 1.5rem !important
+  .ms-5 {
+    margin-left: 3rem !important;
   }
 
-  .ms-sm-5 {
-    margin-left: 3rem !important
-  }
-
-  .ms-sm-auto {
-    margin-left: auto !important
+  .ms-auto {
+    margin-left: auto !important;
   }
 
   .p-sm-0 {
